--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "url-shortener",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
-  }
+	"name": "url-shortener",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"db:push": "drizzle-kit push:sqlite",
+		"db:studio": "drizzle-kit studio"
+	},
+	"dependencies": {
+		"@libsql/client": "^0.5.6",
+		"dotenv": "^16.4.5",
+		"drizzle-orm": "^0.30.4",
+		"drizzle-zod": "^0.5.1",
+		"nanoid": "^5.0.6",
+		"next": "14.1.4",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"server-only": "^0.0.1",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@types/node": "^20.11.30",
+		"@types/react": "^18.2.67",
+		"@types/react-dom": "^18.2.22",
+		"autoprefixer": "^10.0.1",
+		"clsx": "^2.1.0",
+		"drizzle-kit": "^0.20.14",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "14.1.4",
+		"postcss": "^8.4.38",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5.4.3"
+	}
 }
