--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
+		"db:generate": "drizzle-kit generate:sqlite",
 		"db:push": "drizzle-kit push:sqlite",
 		"db:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
 		"@libsql/client": "^0.5.6",
+		"@lucia-auth/adapter-drizzle": "^1.0.7",
+		"arctic": "^1.4.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.30.4",
 		"drizzle-zod": "^0.5.1",
+		"lucia": "^3.1.1",
 		"nanoid": "^5.0.6",
 		"next": "14.1.4",
+		"oslo": "^1.1.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"server-only": "^0.0.1",
