--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	"dependencies": {
 		"@libsql/client": "^0.5.6",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
+		"@node-rs/argon2": "^1.8.0",
+		"@node-rs/bcrypt": "^1.10.1",
 		"arctic": "^1.4.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.30.4",
