--- a/package.json
+++ b/package.json
@@ -16,30 +16,31 @@
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
 		"@node-rs/argon2": "^1.8.0",
 		"@node-rs/bcrypt": "^1.10.1",
-		"arctic": "^1.4.0",
+		"arctic": "^1.5.0",
 		"dotenv": "^16.4.5",
-		"drizzle-orm": "^0.30.4",
+		"drizzle-orm": "^0.30.8",
 		"drizzle-zod": "^0.5.1",
 		"lucia": "^3.1.1",
-		"nanoid": "^5.0.6",
+		"nanoid": "^5.0.7",
 		"next": "14.1.4",
-		"oslo": "^1.1.3",
+		"oslo": "^1.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"server-only": "^0.0.1",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@types/node": "^20.11.30",
-		"@types/react": "^18.2.67",
-		"@types/react-dom": "^18.2.22",
-		"autoprefixer": "^10.0.1",
+		"@types/node": "^20.12.7",
+		"@types/react": "^18.2.79",
+		"@types/react-dom": "^18.2.25",
+		"autoprefixer": "^10.4.19",
 		"clsx": "^2.1.0",
 		"drizzle-kit": "^0.20.14",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "14.1.4",
 		"postcss": "^8.4.38",
-		"tailwindcss": "^3.3.0",
-		"typescript": "^5.4.3"
+		"prettier": "^3.2.5",
+		"tailwindcss": "^3.4.3",
+		"typescript": "^5.4.5"
 	}
 }
